--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -1,8 +1,19 @@
+[SERVICE]
+  Parsers_File /fluent-bit/etc/parsers.conf
+
 [INPUT]
-  Name dummy
-  Dummy {"top": {".dotted": "value"}}
+  Name tail
+  Path /fluent-bit/access.log
+  Read_from_Head true
+  Parser k8s-nginx-ingress
+  Tag nginx
+
+## Filter only 4xx and 5xx upstream_status
+[FILTER]
+  Name grep
+  Match nginx
+  Regex upstream_status ^4|5
 
 [OUTPUT]
-  Name es
-  Host elasticsearch
-  Replace_Dots On
+  Match nginx
+  Name stdout
